--- a/styles.css
+++ b/styles.css
@@ -372,6 +372,7 @@
     
     .income_del,
     .expense_del {
+        border-radius: 50%;
         width: 100%;
         background-image: url(./image/remove.svg);
         background-position: 50%;
